# ddf

./: .gitignore  README.md  bin.opam.locked  ddf.opam  ddf.opam.locked  dune-project  lib.opam  lib.opam.locked  mv_rmrf.opam.locked  test.opam
.github/workflows/: build.yml  release-artifacts.yml
lib/: dune  fs.ml  lib.ml  lib.opam
test/: dune  test.ml
