opam-version: "2.0"
synopsis: "Library functions to support CLI"
description: "A longer description"
maintainer: ["Christian Todd"]
authors: ["Christian Todd"]
license: "MIT"
homepage: "https://github.com/username/reponame"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/username/reponame/issues"
depends: [
  "eio_main" 
]
